# web

./: Cargo.toml  Dockerfile  nginx.conf
.github/workflows/: docker-image.yaml  lint-and-test.yaml
src/: hooks.rs  main.rs
src/hooks/: mod.rs  use_mutation.rs  use_query.rs
src/pages/: home.rs  mod.rs  signup.rs
